# SM_Notepad

./: GUIDE.md  LICENSE  README.md  pyproject.toml
Notepad/: app.py
SM_Notepad/: app.py
